--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - ECLIPSE_RELEASE="-Declipse-release=neon"
     - ECLIPSE_RELEASE="-Declipse-release=oxygen"
     - ECLIPSE_RELEASE="-Declipse-release=photon"
+    - ECLIPSE_RELEASE="-Declipse-release=2018-09"
 
 services:
   - xvfb
