Add target Eclipse 2018-09

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
     - ECLIPSE_RELEASE="-Declipse-release=neon"
     - ECLIPSE_RELEASE="-Declipse-release=oxygen"
     - ECLIPSE_RELEASE="-Declipse-release=photon"
+    - ECLIPSE_RELEASE="-Declipse-release=2018-09"
 
 jdk: oraclejdk8
 
