Add target Eclipse 2018-12

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
     - ECLIPSE_RELEASE="-Declipse-release=oxygen"
     - ECLIPSE_RELEASE="-Declipse-release=photon"
     - ECLIPSE_RELEASE="-Declipse-release=2018-09"
+    - ECLIPSE_RELEASE="-Declipse-release=2018-12"
 
 jdk: oraclejdk8
 
