--- a/ch.acanda.eclipse.pmd.target/pom.xml
+++ b/ch.acanda.eclipse.pmd.target/pom.xml
@@ -82,6 +82,18 @@
                 <module>2018-09</module>
             </modules>
         </profile>
+        <profile>
+            <id>eclipse-2018-12</id>
+            <activation>
+                <property>
+                    <name>eclipse-release</name>
+                    <value>2018-12</value>
+                </property>
+            </activation>
+            <modules>
+                <module>2018-12</module>
+            </modules>
+        </profile>
     </profiles>
 
 </project>
