--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -24,7 +24,7 @@
     <url>http://acanda.github.io/eclipse-pmd/</url>
 
     <properties>
-        <tycho-version>1.0.0</tycho-version>
+        <tycho-version>1.3.0</tycho-version>
         <tycho-extras-version>${tycho-version}</tycho-extras-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <os-jvm-flags /> <!-- see <profiles> for os specific flags -->
@@ -256,6 +256,28 @@
                     <id>2018-09</id>
                     <layout>p2</layout>
                     <url>http://download.eclipse.org/releases/2018-09/</url>
+                </repository>
+                <repository>
+                    <id>swtbot</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/technology/swtbot/releases/2.7.0/</url>
+                </repository>
+            </repositories>
+        </profile>
+
+        <profile>
+            <id>eclipse-2018-12</id>
+            <activation>
+                <property>
+                    <name>eclipse-release</name>
+                    <value>2018-12</value>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>2018-12</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/releases/2018-12/</url>
                 </repository>
                 <repository>
                     <id>swtbot</id>
