Add PMD's Apex language module

--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-apex-6.15.0.jar" sourcepath="lib/pmd-apex-6.15.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-apex-jorje-6.15.0-lib.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-java-6.15.0.jar" sourcepath="lib/pmd-java-6.15.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-javascript-6.15.0.jar" sourcepath="lib/pmd-javascript-6.15.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-jsp-6.15.0.jar" sourcepath="lib/pmd-jsp-6.15.0-sources.jar"/>
@@ -19,5 +21,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.8.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8-dom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/saxon-9.1.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-3.5.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
