--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -3,6 +3,8 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
+               lib/pmd-apex-6.15.0.jar,\
+               lib/pmd-apex-jorje-6.15.0-lib.jar,\
                lib/pmd-core-6.15.0.jar,\
                lib/pmd-java-6.15.0.jar,\
                lib/pmd-javascript-6.15.0.jar,\
@@ -19,4 +21,5 @@ bin.includes = plugin.xml,\
                lib/commons-lang3-3.8.1.jar,\
                lib/xercesImpl-2.11.0.jar,\
                lib/saxon-9.1.0.8-dom.jar,\
-               lib/saxon-9.1.0.8.jar
+               lib/saxon-9.1.0.8.jar,\
+               lib/antlr-runtime-3.5.2.jar
