--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -178,6 +178,26 @@
         </profile>
 
         <profile>
+            <activation>
+                <property>
+                    <name>!eclipse-release</name>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>neon</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/releases/neon/</url>
+                </repository>
+                <repository>
+                    <id>swtbot</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/technology/swtbot/releases/2.3.0/</url>
+                </repository>
+            </repositories>
+        </profile>
+
+        <profile>
             <id>eclipse-neon</id>
             <activation>
                 <property>
