Add target Eclipse 2019-03

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - ECLIPSE_RELEASE="-Declipse-release=photon"
     - ECLIPSE_RELEASE="-Declipse-release=2018-09"
     - ECLIPSE_RELEASE="-Declipse-release=2018-12"
+    - ECLIPSE_RELEASE="-Declipse-release=2019-03"
 
 jdk: oraclejdk8
 
