--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - ECLIPSE_RELEASE="-Declipse-release=photon"
     - ECLIPSE_RELEASE="-Declipse-release=2018-09"
     - ECLIPSE_RELEASE="-Declipse-release=2018-12"
+    - ECLIPSE_RELEASE="-Declipse-release=2019-03"
 
 services:
   - xvfb
