--- a/ch.acanda.eclipse.pmd.target/pom.xml
+++ b/ch.acanda.eclipse.pmd.target/pom.xml
@@ -154,6 +154,18 @@
                 <module>2019-03</module>
             </modules>
         </profile>
+        <profile>
+            <id>eclipse-2019-06</id>
+            <activation>
+                <property>
+                    <name>eclipse-release</name>
+                    <value>2019-06</value>
+                </property>
+            </activation>
+            <modules>
+                <module>2019-06</module>
+            </modules>
+        </profile>
     </profiles>
 
 </project>
