--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -435,7 +435,29 @@
                 <repository>
                     <id>swtbot</id>
                     <layout>p2</layout>
-                    <url>http://download.eclipse.org/technology/swtbot/releases/2.7.0/</url>
+                    <url>http://download.eclipse.org/technology/swtbot/releases/2.8.0/</url>
+                </repository>
+            </repositories>
+        </profile>
+
+        <profile>
+            <id>eclipse-2019-09</id>
+            <activation>
+                <property>
+                    <name>eclipse-release</name>
+                    <value>2019-09</value>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>2019-09</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/releases/2019-09/</url>
+                </repository>
+                <repository>
+                    <id>swtbot</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/technology/swtbot/releases/2.8.0/</url>
                 </repository>
             </repositories>
         </profile>
