--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -462,6 +462,28 @@
             </repositories>
         </profile>
 
+        <profile>
+            <id>eclipse-2019-12</id>
+            <activation>
+                <property>
+                    <name>eclipse-release</name>
+                    <value>2019-12</value>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>2019-12</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/releases/2019-12/</url>
+                </repository>
+                <repository>
+                    <id>swtbot</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/technology/swtbot/releases/2.8.0/</url>
+                </repository>
+            </repositories>
+        </profile>
+
     </profiles>
 
     <developers>
