Add support for Modelica

--- a/ch.acanda.eclipse.pmd.core/build.properties
+++ b/ch.acanda.eclipse.pmd.core/build.properties
@@ -7,6 +7,7 @@ bin.includes = plugin.xml,\
                lib/pmd-java-6.21.0.jar,\
                lib/pmd-javascript-6.21.0.jar,\
                lib/pmd-jsp-6.21.0.jar,\
+               lib/pmd-modelica-6.21.0.jar,\
                lib/pmd-plsql-6.21.0.jar,\
                lib/pmd-vm-6.21.0.jar,\
                lib/pmd-xml-6.21.0.jar,\
