--- a/ch.acanda.eclipse.pmd.core/.classpath
+++ b/ch.acanda.eclipse.pmd.core/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/pmd-java-6.21.0.jar" sourcepath="lib/pmd-java-6.21.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-javascript-6.21.0.jar" sourcepath="lib/pmd-javascript-6.21.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-jsp-6.21.0.jar" sourcepath="lib/pmd-jsp-6.21.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pmd-modelica-6.21.0.jar" sourcepath="lib/pmd-modelica-6.21.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-plsql-6.21.0.jar" sourcepath="lib/pmd-plsql-6.21.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-vm-6.21.0.jar" sourcepath="lib/pmd-vm-6.21.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/pmd-xml-6.21.0.jar" sourcepath="lib/pmd-xml-6.21.0-sources.jar"/>
