Update Guava to version 28.2-jre

--- a/ch.acanda.eclipse.pmd.lib/build.properties
+++ b/ch.acanda.eclipse.pmd.lib/build.properties
@@ -1,2 +1,3 @@
 bin.includes = META-INF/,\
-               lib/guava-20.0.jar
+               lib/guava-28.2-jre.jar,\
+               lib/failureaccess-1.0.1.jar
