--- a/ch.acanda.eclipse.pmd.lib/.classpath
+++ b/ch.acanda.eclipse.pmd.lib/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/guava-20.0.jar" sourcepath="lib/guava-20.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/failureaccess-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-28.2-jre.jar" sourcepath="lib/guava-28.2-jre-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/failureaccess-1.0.1.jar" sourcepath="lib/failureaccess-1.0.1-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
