--- a/ch.acanda.eclipse.pmd.lib/pom.xml
+++ b/ch.acanda.eclipse.pmd.lib/pom.xml
@@ -7,7 +7,8 @@
     which accompanies this distribution, and is available at
     http://www.eclipse.org/legal/epl-v10.html
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,7 +22,7 @@
     <artifactId>ch.acanda.eclipse.pmd.lib</artifactId>
     <packaging>eclipse-plugin</packaging>
     <name>eclipse-pmd third party libraries</name>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -58,6 +59,17 @@
                                     <groupId>com.google.guava</groupId>
                                     <artifactId>guava</artifactId>
                                     <version>${guava-version}</version>
+                                    <classifier>sources</classifier>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.guava</groupId>
+                                    <artifactId>failureaccess</artifactId>
+                                    <version>${guava-failureaccess-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.google.guava</groupId>
+                                    <artifactId>failureaccess</artifactId>
+                                    <version>${guava-failureaccess-version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                             </artifactItems>
