--- a/ch.acanda.eclipse.pmd/pom.xml
+++ b/ch.acanda.eclipse.pmd/pom.xml
@@ -31,7 +31,8 @@
         <eclipse-release>indigo</eclipse-release>
         <lib-path>${basedir}/lib</lib-path>
         <mockito-version>1.10.19</mockito-version>
-        <guava-version>20.0</guava-version>
+        <guava-version>28.2-jre</guava-version>
+        <guava-failureaccess-version>1.0.1</guava-failureaccess-version>
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
