Update Mockito to version 3.3.3

--- a/ch.acanda.eclipse.pmd.core.tests/build.properties
+++ b/ch.acanda.eclipse.pmd.core.tests/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/mockito-all-1.10.19.jar
+               lib/mockito-core-3.3.3.jar,\
+               lib/byte-buddy-1.10.5.jar,\
+               lib/objenesis-2.6.jar,\
+               lib/byte-buddy-agent-1.10.5.jar
