--- a/ch.acanda.eclipse.pmd.java.tests/.classpath
+++ b/ch.acanda.eclipse.pmd.java.tests/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/mockito-all-1.10.19.jar" sourcepath="lib/mockito-all-1.10.19-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mockito-core-3.3.3.jar" sourcepath="lib/mockito-core-3.3.3-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/byte-buddy-1.10.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/byte-buddy-agent-1.10.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/objenesis-2.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
