--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
     - ECLIPSE_RELEASE="-Declipse-release=2019-06"
     - ECLIPSE_RELEASE="-Declipse-release=2019-09"
     - ECLIPSE_RELEASE="-Declipse-release=2019-12"
+    - ECLIPSE_RELEASE="-Declipse-release=2020-03"
 
 services:
   - xvfb
