--- a/ch.acanda.eclipse.pmd.target/pom.xml
+++ b/ch.acanda.eclipse.pmd.target/pom.xml
@@ -190,6 +190,18 @@
                 <module>2019-12</module>
             </modules>
         </profile>
+        <profile>
+            <id>eclipse-2020-03</id>
+            <activation>
+                <property>
+                    <name>eclipse-release</name>
+                    <value>2020-03</value>
+                </property>
+            </activation>
+            <modules>
+                <module>2020-03</module>
+            </modules>
+        </profile>
     </profiles>
 
 </project>
